# fby-2017-workshop

./: INSTALL.md  README.md  demo-bot.cabal  stack.yaml
app/: Main.hs
app/stages/: stage_1.hs  stage_2.hs  stage_3.hs  stage_4.hs  stage_5.hs  stage_6.hs  stage_7.hs
