name:                demo-bot
version:             0.1
synopsis:            Telegram bot demo for f(by) 2017 workshop.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable demo-bot
  ghc-options: -Wall
  main-is:             Main.hs
  hs-source-dirs:      app/
  build-depends:
                base
              , aeson
              , text
              , http-api-data
              , http-client
              , http-client-tls
              , servant-client
              , telegram-bot-simple
  default-language: Haskell2010

